    - Realtek RTL8192E firmware for use with rtl8192e driver, thanks to
      Geoff Simmons (Closes: #573950)
    - Realtek RTL8192SU firmware for use with rtl8192su driver, thanks to
      Stefan Lippers-Hollmann (Closes: #579694)
  * Update iwlwifi-6000 to 9.193.4.1.
  * Add copyright and licence text for radeon/R{6,7}00_rlc.bin to
    firmware-linux-nonfree (Closes: #576104)

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 15 Mar 2010 13:50:12 +0000

firmware-nonfree (0.23) unstable; urgency=low

  * Update firmware-qlogic description to specify supported chips as
    named in pci-ids (Closes: #513140)
  * Update hardware list in firmware-ralink description
  * Correct some version numbers in firmware-ralink description
  * Add Ralink RT3000E[D] firmware (rt3090.bin) for use with rt3090sta
  * Update Ralink RT2800U[D] firmware (rt2870.bin) from Linux 2.6.32
  * Add Radeon R600/R700-family RLC firmware for use with Linux 2.6.33
    and Debian kernel package 2.6.32-10 (Closes: #565437)

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 04 Mar 2010 22:35:56 +0000

firmware-nonfree (0.22) unstable; urgency=low

  [ maximilian attems ]
  * Add iwlwifi-1000-3.ucode.
  * Add iwlwifi-6000-4.ucode.
  
  [ Ben Hutchings ]
  * Update Radeon firmware for use with Linux 2.6.32 (Closes: #558023)
  * Change URI for firmware-linux-nonfree to refer to David Woodhouse's
    linux-firmware.git repository (Closes: #558033)
  * Include names of all firmware files in package descriptions
    (Closes: #553710)
  * Do not include 'version unknown' in package descriptions
  * Update Broadcom NetXtreme II firmware for use with Linux 2.6.32
    (Closes: #560065)

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 17 Dec 2009 03:44:03 +0000

firmware-nonfree (0.21) unstable; urgency=low

  * Update to linux-support-2.6.31-1.
  * Upload to unstable.

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 25 Oct 2009 18:44:41 +0000

firmware-nonfree (0.20) experimental; urgency=low

  [ Ben Hutchings ]