@@ -9,6 +9,7 @@ firmware-nonfree (0.24) UNRELEASED; urgency=low
   * Update iwlwifi-6000 to 9.193.4.1.
   * Add copyright and licence text for radeon/R{6,7}00_rlc.bin to
     firmware-linux-nonfree (Closes: #576104)
+  * Merge preinstallation license note and question (Closes: #574145)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 15 Mar 2010 13:50:12 +0000
 
